Signed-off-by: szh 优化数据存储方式